# email

./: LICENSE  email.cabal
src/Data/: Email.hs
