cabal-version:       2.4
name:                email
synopsis:            Reusable Email data type.
version:             0.0.0.1
license-file:        LICENSE
license-file:        LICENSE
author:              Denis Redozubov
maintainer:          denis.redozubov@gmail.com
category:            Web
build-type:          Simple
library
  build-depends:       base >=4.10 && <5
                     , aeson
                     , bytestring
                     , email-validate
                     , email-validate-extra
                     , lens >= 4.13
                     , QuickCheck
                     , text >= 1.2.1.3
  default-extensions:  TemplateHaskell
                     , GeneralizedNewtypeDeriving
                     , OverloadedStrings
  default-language:    Haskell2010
  exposed-modules:     Data.Email
  ghc-options:         -Wall
                       -funbox-strict-fields
  hs-source-dirs:      src
